added the cubes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
   <div id="hotbar">
 
-        <button id="calc" onclick="">Calculations</button>
-        <button id="sett">Settings</button>
-        <button id="help">Help</button>
+        <button id="calc" class="button">Calculations</button>
+        <button id="sett" class="button">Settings</button>
+        <button id="help" class="button">Help</button>
 
   </div>
+
 </body>
 
 </html>
