--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Hjonkle</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script type="importmap">
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Hjonkle</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <script type="importmap">
         {
           "imports": {
             "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
@@ -14,18 +15,21 @@
           }
         }
     </script>
-    <script type="module" src='main.js'></script>
+  <script type="module" src='main.js'></script>
 </head>
+
 <body>
   <canvas id="canvas"></canvas>
 
-  <div id="hotbar">
 
-        <button id="calc" class="button">Calculations</button>
-        <button id="sett" class="button">Settings</button>
-        <button id="help" class="button">Help</button>
+  <form id="hotbar" onsubmit="return false">
 
-  </div>
+    <button id="button" value="calc">Calculations</button>
+    <button id="button" value="sett">Settings</button>
+    <button id="button" value="help">Help</button>
+    
+
+  </form>
 
 </body>
 
