--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <form id="hotbar" onsubmit="return false">
 
-    <button id="button" value="calc">Calculations</button>
-    <button id="button" value="sett">Settings</button>
-    <button id="button" value="help">Help</button>
-    
+    <button id="calc" value="calc">Calculations</button>
+    <button id="sett" value="sett">Settings</button>
+    <button id="index" value="index" hidden>Back</button>
+
 
   </form>
 
