Cube stuff and things

--- a/calc.html
+++ b/calc.html
@@ -33,9 +33,9 @@
 
     </form>
 
-
+    
     <div class="container">
-        <button id="buttonOff">Damage</button>
+        <button id="buttonOff" class="but">Damage</button>
         <div class="hide menuPanel">
             <h1>Damage Calculator</h1>
             <form class="dmgForm" onsubmit="return false">
@@ -63,7 +63,6 @@
             </form>
         </div>
     </div>
-    <form id="navbar" onsubmit="return false"></form>
 
 </body>
 
