Two moving pages
In calc.html

--- a/calc.html
+++ b/calc.html
@@ -33,9 +33,9 @@
 
     </form>
 
-    
+
     <div class="container">
-        <button id="buttonOff" class="but">Damage</button>
+        <button id="dmgOff">Damage</button>
         <div class="hide menuPanel">
             <h1>Damage Calculator</h1>
             <form class="dmgForm" onsubmit="return false">
@@ -57,11 +57,22 @@
                     <h2>Weapon Damage</h2>
                     <input type="number" id="dmg">
                 </div>
-                
+
+
 
 
             </form>
         </div>
+        <button id="scathaOff">Scatha</button>
+        <div class="hide scathaPanel">
+            <h1>Scatha Chance Calculator</h1>
+            <form class="dmgForm" onsubmit="return false">
+
+                <p>Nothing Yet</p>
+
+            </form>
+        </div>
+
     </div>
 
 </body>
