--- a/calc.html
+++ b/calc.html
@@ -42,7 +42,7 @@
                 <div class="dmgDiv">
                     <div id="dmgDiv">
                         <h2>Combat Level</h2>
-                        <input type="number" id=cmb">
+                        <input type="number" id="cmb">
                     </div>
                     <div id="dmgDiv">
                         <h2>Strength</h2>
