calc.html change
buttons specific to that page can only be turned on one at a time, some style additions too

--- a/calc.html
+++ b/calc.html
@@ -50,7 +50,7 @@
                     </div>
                     <div id="dmgDiv">
                         <h2>Crit Damage</h2>
-                        <input type="number" id="crt">
+                        <input type="number" id="ctd">
                     </div>
                 </div>
                 <div id="dmgDiv">
