--- a/calc.html
+++ b/calc.html
@@ -35,7 +35,7 @@
     <div class="container">
         <button id="load" style="display: none; visibility: hidden;"></button>
         <button id="dmgOff">Damage</button>
-        <div class="hide menuPanel">
+        <div class="hide menuPanel" id="menuPanel">
             <h1>Damage Calculator</h1>
             <form id="dmgForm" onsubmit="return false">
                 <div class="dmgDiv">
@@ -81,7 +81,7 @@
 
 
         <button id="scathaOff">Scatha</button>
-        <div class="hide scathaPanel">
+        <div class="hide scathaPanel" id="scathaPanel">
             <h1>Scatha Chance Calculator</h1>
             <form id="scathaForm" onsubmit="return false">
 
