--- a/calcGPA/index.html
+++ b/calcGPA/index.html
@@ -84,13 +84,14 @@
 <body>
     <h1>Lets Calculate Your Worth</h1>
     <h2>This is Unweighted</h2>
-    <p>Insert How Much of Each Grade Letters You Have or add a new grade selection for each class, either works</br>
+    <p>Add a new grade selection for each class</br>
         &</br>
-        If it is worth half, or quarter, credits then type in .5, or .25 and such.
+        If it is worth half, or quarter, credits then type in .5, or .25 and such.</br>
+        &</br>
+        The first box is the number classes, followed by the letter grade, and then the credits each class is worth.
     </p>
     <button onclick="getGrades()" id="gradeButton">Submit</button>
     <div id="ye">
-        <p>How Many of Each Letter Grades & their credits</p>
         <div class="LGrade">
             <div id="textarea" contenteditable>Does Nothing</div>|<input type="number" name="num" placeholder="0">| Letter Grade:
             <select name="grade">
